# OcrBridgeWinRT_SDK

./: CMakeLists.txt  FoundryOcr.sln  Main.mafest  OcrBridgeWinRT_SDK.csproj  OcrBridgeWinRT_SDK.sln
.github/workflows/: build.yml
src/: main.cpp
